Bug fixed causing the icons to appear of the screen on small screen sizes. Fixed using media queries

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -554,6 +554,9 @@ body{
 }
 
 @media screen and (max-width: 400px) {
+    #number-pad-inner {
+        margin: 5% 0;
+    }
     .number-pad-item {
         margin: 1px;
      }
@@ -581,5 +584,14 @@ body{
      }
      #top-positioning {
         width: 270px;
+    }
+    #header {
+        font-size: 13px;
+    }
+    .icon-style {
+        padding: 10px 5px;
+    }
+    #main-game-buttons {
+        margin: 5% 0;
     }
 }
